# ebay-connector-app

./: --service aebay-api  Select-String -Pattern INTERNAL_API_KEY  .gitattributes  .gitignore  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEPLOY_NORMALIZATION.md  DEPLOY_NOW.md  DEV_REFERENCE.md  EBAY_OAUTH_MASTER_PROMPT.md  EBAY_OAUTH_TROUBLESHOOTING.md  EBAY_SETUP_GUIDE.md  FULL_EBAY_HTTP_REQUEST.md  GITHUB_ENVIRONMENTS_DEPLOYMENT.md  GRID_FIX_DEPLOYED.md  HANDOFF_PROMPT.md  MULTI_ACCOUNT_IMPLEMENTATION.md  PR2_QUESTIONS_ANSWERS.md  PRODUCTION_BACKEND_INVESTIGATION.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STATUS.md  RAILWAY_SETUP.md  README.md  REPORT.md  ROADMAP.md  SESSION_COMPLETE.md  SESSION_COMPLETE_GRID_FIX.md  SESSION_HANDOFF.md  SHIPPING_INFORMATION.md  WARP.md  _insert_code.py  _tmp_bin_xml_sample.sql  _tmp_doc_checks.sql  _tmp_link_inventory.sql  _tmp_parts_detail_lookup.sql  _tmp_parts_detail_probe.sql  _tmp_sku_catalog.sql  _tmp_sku_queries.sql  _tmp_tbl_parts_condition.sql  analyze_test_ebay_listing.py  (+40 more)
backend/: .env.example  Dockerfile  Procfile  README.md  _check_required.py  _check_required2.py  _db_check.py  _db_probe.py  _db_sanity.py  _env_check.py  add_missing_columns.py  alembic.ini  analysis_results.json  analyze_buying_flow.py  analyze_ebay_tables.py  check_duplicates.py  check_ebay_orders_status.py  check_env.py  check_index.py  check_line_items.py  check_orders_count.py  check_orders_tables.py  check_runs.py  check_storage.py  check_temp_count.py  check_temp_table.py  debug_categories.py  debug_dump_inventory_statuses.py  debug_env.py  debug_shipping.py  debug_worker_runs.py  ebay_connector.db  entrypoint.sh  extract_env.py  fly.toml  inspect_columns.py  inspect_sku_row_163819.py  inspect_sku_table.py  migrate_orders.py  (+25 more)
frontend/: .env  (+9 more)
(+659 files in other folders)
